deploy: e1dc463365d2c57167d3de254166555fc380ee88

--- a/index.html
+++ b/index.html
@@ -947,9 +947,9 @@
       <img class="thumb" src="games/Cactus Mccoy /thumbnail.png" alt="Cactus Mccoy ">
     </div>
     <div class="card-title">Cactus Mccoy </div>
-  </div><div class="card game-card" data-index="22" data-folder="Cactus Mccoy 2" data-name="cactus mccoy 2" onclick="prepareGame('Cactus%20Mccoy%202','Cactus%20Mccoy%202','games/Cactus Mccoy 2/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Cactus Mccoy 2/thumbnail.jpg')">
-      <img class="thumb" src="games/Cactus Mccoy 2/thumbnail.jpg" alt="Cactus Mccoy 2">
+  </div><div class="card game-card" data-index="22" data-folder="Cactus Mccoy 2" data-name="cactus mccoy 2" onclick="prepareGame('Cactus%20Mccoy%202','Cactus%20Mccoy%202','games/Cactus Mccoy 2/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Cactus Mccoy 2/thumbnail.png')">
+      <img class="thumb" src="games/Cactus Mccoy 2/thumbnail.png" alt="Cactus Mccoy 2">
     </div>
     <div class="card-title">Cactus Mccoy 2</div>
   </div><div class="card game-card" data-index="23" data-folder="Car Crash 3" data-name="car crash 3" onclick="prepareGame('Car%20Crash%203','Car%20Crash%203','games/Car Crash 3/thumbnail.png')">
