--- a/index.html
+++ b/index.html
@@ -982,11 +982,11 @@
       <img class="thumb" src="games/Cut the Rope/thumbnail.png" alt="Cut the Rope">
     </div>
     <div class="card-title">Cut the Rope</div>
-  </div><div class="card game-card" data-index="29" data-folder="Dead Zed" data-name="dead zed" onclick="prepareGame('Dead%20Zed','Dead%20Zed','games/Dead Zed/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Dead Zed/thumbnail.png')">
-      <img class="thumb" src="games/Dead Zed/thumbnail.png" alt="Dead Zed">
+  </div><div class="card game-card" data-index="29" data-folder="Dead Zed " data-name="dead zed " onclick="prepareGame('Dead%20Zed%20','Dead%20Zed%20','games/Dead Zed /thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Dead Zed /thumbnail.png')">
+      <img class="thumb" src="games/Dead Zed /thumbnail.png" alt="Dead Zed ">
     </div>
-    <div class="card-title">Dead Zed</div>
+    <div class="card-title">Dead Zed </div>
   </div><div class="card game-card" data-index="30" data-folder="Doki Doki Literature Club" data-name="doki doki literature club" onclick="prepareGame('Doki%20Doki%20Literature%20Club','Doki%20Doki%20Literature%20Club','games/Doki Doki Literature Club/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
       <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club">
