deploy: bccb221a6e4a84fce830b2b763b89c4f414a8845

--- a/index.html
+++ b/index.html
@@ -947,9 +947,9 @@
       <img class="thumb" src="games/CirclO 2/thumbnail.jpg" alt="CirclO 2">
     </div>
     <div class="card-title">CirclO 2</div>
-  </div><div class="card game-card" data-index="22" data-folder="Class of '09" data-name="class of '09" onclick="prepareGame('Class%20of%20'09','Class%20of%20'09','games/Class of '09/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Class of '09/thumbnail.jpg')">
-      <img class="thumb" src="games/Class of '09/thumbnail.jpg" alt="Class of '09">
+  </div><div class="card game-card" data-index="22" data-folder="Class of '09" data-name="class of '09" onclick="prepareGame('Class%20of%20'09','Class%20of%20'09','games/Class of '09/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Class of '09/thumbnail.png')">
+      <img class="thumb" src="games/Class of '09/thumbnail.png" alt="Class of '09">
     </div>
     <div class="card-title">Class of '09</div>
   </div><div class="card game-card" data-index="23" data-folder="Cluster Rush" data-name="cluster rush" onclick="prepareGame('Cluster%20Rush','Cluster%20Rush','games/Cluster Rush/thumbnail.png')">
