--- a/index.html
+++ b/index.html
@@ -1012,42 +1012,47 @@
       <img class="thumb" src="games/Douchebag Life/thumbnail.jpg" alt="Douchebag Life">
     </div>
     <div class="card-title">Douchebag Life</div>
-  </div><div class="card game-card" data-index="35" data-folder="Escape Road " data-name="escape road " onclick="prepareGame('Escape%20Road%20','Escape%20Road%20','games/Escape Road /thumbnail.png')">
+  </div><div class="card game-card" data-index="35" data-folder="Dreader" data-name="dreader" onclick="prepareGame('Dreader','Dreader','games/Dreader/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
+      <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader">
+    </div>
+    <div class="card-title">Dreader</div>
+  </div><div class="card game-card" data-index="36" data-folder="Escape Road " data-name="escape road " onclick="prepareGame('Escape%20Road%20','Escape%20Road%20','games/Escape Road /thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
       <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road ">
     </div>
     <div class="card-title">Escape Road </div>
-  </div><div class="card game-card" data-index="36" data-folder="Escape Road 2" data-name="escape road 2" onclick="prepareGame('Escape%20Road%202','Escape%20Road%202','games/Escape Road 2/thumbnail.png')">
+  </div><div class="card game-card" data-index="37" data-folder="Escape Road 2" data-name="escape road 2" onclick="prepareGame('Escape%20Road%202','Escape%20Road%202','games/Escape Road 2/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Escape Road 2/thumbnail.png')">
       <img class="thumb" src="games/Escape Road 2/thumbnail.png" alt="Escape Road 2">
     </div>
     <div class="card-title">Escape Road 2</div>
-  </div><div class="card game-card" data-index="37" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
+  </div><div class="card game-card" data-index="38" data-folder="Friday Night Funkin" data-name="friday night funkin" onclick="prepareGame('Friday%20Night%20Funkin','Friday%20Night%20Funkin','games/Friday Night Funkin/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
       <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin">
     </div>
     <div class="card-title">Friday Night Funkin</div>
-  </div><div class="card game-card" data-index="38" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="39" data-folder="Fruit Ninja" data-name="fruit ninja" onclick="prepareGame('Fruit%20Ninja','Fruit%20Ninja','games/Fruit Ninja/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
       <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja">
     </div>
     <div class="card-title">Fruit Ninja</div>
-  </div><div class="card game-card" data-index="39" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
+  </div><div class="card game-card" data-index="40" data-folder="Geometry Dash Lite" data-name="geometry dash lite" onclick="prepareGame('Geometry%20Dash%20Lite','Geometry%20Dash%20Lite','games/Geometry Dash Lite/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
       <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite">
     </div>
     <div class="card-title">Geometry Dash Lite</div>
-  </div><div class="card game-card" data-index="40" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="41" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="41" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="42" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="42" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="43" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
