--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
     <header onclick="goToHome()"><img src="assets/logo.png" alt="Logo"></header>
     <ul id="categoryList">
       <li onclick="filterCategory('Home')">Home</li>
-      <li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('Racing')">Racing</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
+      <li onclick="filterCategory('Uncategorized')">Uncategorized</li><li onclick="filterCategory('Shooter')">Shooter</li><li onclick="filterCategory('Tower Defence')">Tower Defence</li><li onclick="filterCategory('Horror')">Horror</li><li onclick="filterCategory('Basketball')">Basketball</li><li onclick="filterCategory('Clickers')">Clickers</li><li onclick="filterCategory('Sniper')">Sniper</li><li onclick="filterCategory('2 Player')">2 Player</li><li onclick="filterCategory('Platformer')">Platformer</li>
     </ul>
   </div>
 
@@ -1197,16 +1197,6 @@
       <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5">
     </div>
     <div class="card-title">Clear Vision 5</div>
-  </div>
-          </div>
-        </div><div class="category" data-category="Racing">
-          <h2>Racing</h2>
-          <div class="grid">
-            <div class="card game-card" data-index="0" data-folder="Drift Hunters" data-name="drift hunters" onclick="prepareGame('Drift%20Hunters','Drift%20Hunters','games/Drift Hunters/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.png')">
-      <img class="thumb" src="games/Drift Hunters/thumbnail.png" alt="Drift Hunters">
-    </div>
-    <div class="card-title">Drift Hunters</div>
   </div>
           </div>
         </div><div class="category" data-category="2 Player">
