--- a/index.html
+++ b/index.html
@@ -1117,17 +1117,22 @@
       <img class="thumb" src="games/Gobble/thumbnail.jpg" alt="Gobble">
     </div>
     <div class="card-title">Gobble</div>
-  </div><div class="card game-card" data-index="56" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="56" data-folder="Going Balls" data-name="going balls" onclick="prepareGame('Going%20Balls','Going%20Balls','games/Going Balls/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
+      <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls">
+    </div>
+    <div class="card-title">Going Balls</div>
+  </div><div class="card game-card" data-index="57" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="57" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="58" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="58" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="59" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
