deploy: 23d50559fd1269edf10ec86d4752ab0ecbc1eec0

--- a/index.html
+++ b/index.html
@@ -1137,17 +1137,22 @@
       <img class="thumb" src="games/Gun Knight/thumbnail.png" alt="Gun Knight">
     </div>
     <div class="card-title">Gun Knight</div>
-  </div><div class="card game-card" data-index="60" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="60" data-folder="Gun Spin" data-name="gun spin" onclick="prepareGame('Gun%20Spin','Gun%20Spin','games/Gun Spin/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
+      <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin">
+    </div>
+    <div class="card-title">Gun Spin</div>
+  </div><div class="card game-card" data-index="61" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="61" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="62" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="62" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="63" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
