--- a/index.html
+++ b/index.html
@@ -1102,9 +1102,9 @@
       <img class="thumb" src="games/Get On Top/thumbnail.jpg" alt="Get On Top">
     </div>
     <div class="card-title">Get On Top</div>
-  </div><div class="card game-card" data-index="53" data-folder="Get Yoked" data-name="get yoked" onclick="prepareGame('Get%20Yoked','Get%20Yoked','games/Get Yoked/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.png')">
-      <img class="thumb" src="games/Get Yoked/thumbnail.png" alt="Get Yoked">
+  </div><div class="card game-card" data-index="53" data-folder="Get Yoked" data-name="get yoked" onclick="prepareGame('Get%20Yoked','Get%20Yoked','games/Get Yoked/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.jpg')">
+      <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked">
     </div>
     <div class="card-title">Get Yoked</div>
   </div><div class="card game-card" data-index="54" data-folder="Gladdihoppers" data-name="gladdihoppers" onclick="prepareGame('Gladdihoppers','Gladdihoppers','games/Gladdihoppers/thumbnail.jpg')">
@@ -1147,17 +1147,22 @@
       <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2">
     </div>
     <div class="card-title">Hanger 2</div>
-  </div><div class="card game-card" data-index="62" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="62" data-folder="Happy Room" data-name="happy room" onclick="prepareGame('Happy%20Room','Happy%20Room','games/Happy Room/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Happy Room/thumbnail.png')">
+      <img class="thumb" src="games/Happy Room/thumbnail.png" alt="Happy Room">
+    </div>
+    <div class="card-title">Happy Room</div>
+  </div><div class="card game-card" data-index="63" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="63" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="64" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="64" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="65" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
