--- a/index.html
+++ b/index.html
@@ -1172,12 +1172,17 @@
       <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison">
     </div>
     <div class="card-title">Henry Stickmin Escaping The Prison</div>
-  </div><div class="card game-card" data-index="67" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="67" data-folder="Henry Stickmin Fleeing The Complex" data-name="henry stickmin fleeing the complex" onclick="prepareGame('Henry%20Stickmin%20Fleeing%20The%20Complex','Henry%20Stickmin%20Fleeing%20The%20Complex','games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
+      <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex">
+    </div>
+    <div class="card-title">Henry Stickmin Fleeing The Complex</div>
+  </div><div class="card game-card" data-index="68" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="68" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="69" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
