deploy: a49a7409336497a146477b062b3bd4894a887cfc

--- a/index.html
+++ b/index.html
@@ -1192,12 +1192,17 @@
       <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer">
     </div>
     <div class="card-title">Highway Racer</div>
-  </div><div class="card game-card" data-index="71" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="71" data-folder="Hill Climb Racing Lite" data-name="hill climb racing lite" onclick="prepareGame('Hill%20Climb%20Racing%20Lite','Hill%20Climb%20Racing%20Lite','games/Hill Climb Racing Lite/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Hill Climb Racing Lite/thumbnail.jpg')">
+      <img class="thumb" src="games/Hill Climb Racing Lite/thumbnail.jpg" alt="Hill Climb Racing Lite">
+    </div>
+    <div class="card-title">Hill Climb Racing Lite</div>
+  </div><div class="card game-card" data-index="72" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="72" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="73" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
